# time-copilot-test

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-22-pjm-np-retrain-autopick-design.md  2026-02-22-pjm-np-retrain-autopick-implementation.md  2026-02-22-pjm-rally-design.md  2026-02-22-pjm-rally-implementation.md  2026-02-23-benchmark-chart-pack-design.md  2026-02-23-benchmark-chart-pack-implementation.md
reports/: benchmark_findings_summary.md  dual_market_benchmark.md  time_copilot_two_pager.md
reports/charts/: README.md
scripts/: generate_charts.py  generate_report.py  run_benchmark.py
src/time_copilot_demo/: __init__.py  baselines.py  champion.py  charts.py  contracts.py  data.py  dnn.py  evaluate.py  features.py  labels.py  model_registry.py  pipeline.py  reporting.py
tests/: test_baselines.py  test_champion.py  test_charts.py  test_contracts.py  test_data.py  test_dual_market_pipeline.py  test_evaluate.py  test_features.py  test_forecast_metrics.py  test_labels.py  test_model_registry.py  test_pipeline.py  test_reporting.py
