[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-copilot-pjm-demo"
version = "0.1.0"
description = "Benchmark-first PJM rally risk prototype"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "pyarrow>=15.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
